--- a/final-project-fe/Pages/Index.cshtml
+++ b/final-project-fe/Pages/Index.cshtml
@@ -35,10 +35,10 @@
 											</div>
 											<div class="banermeta">
 												<p>
-													create your own favourit page.
+													Learn Life Skills – Live with Confidence
 												</p>
-												<span>like them all</span>
-												<a data-ripple="" title="" href="#">start now!</a>
+												<span>Develop Yourself</span>
+												<a data-ripple="" title="" href="/Mentor/MentorPage">Learn now!</a>
 											</div>
 										</div>
 									</div>
@@ -760,7 +760,7 @@
 	<script src="js/main.min.js"></script>
 	<script src="js/script.js"></script>
 	<script src="js/map-init.js"></script> *@
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.5/signalr.min.js"></script>
+	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
