--- a/final-project-fe/Pages/UserCourse.cshtml
+++ b/final-project-fe/Pages/UserCourse.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
 @model final_project_fe.Pages.UserCourseModel
+
 @{
+    ViewData["Title"] = "User Course";
 }
 <!DOCTYPE html>
 <html lang="en">
