--- a/final-project-fe/Pages/Mentor/MentorPage/CreateWorkShop.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/CreateWorkShop.cshtml
@@ -7,7 +7,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Choose a live stream platform</title>
+    <title>Create Your WorkShop</title>
+    <link rel="icon" type="image/x-icon" href="~/images/fav_icon.png" />
     <style>
         .platform-option {
             cursor: pointer;
